# vulkanplay

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  plat.h  plat_xcb.c  shader.frag  vkapi.c  vkapi.h  vulkanplay.c
src/: input_callbacks.h  linalg.h  linalg_test.c  linmath.h  main.c  main.h  materials.h  model.c  model.h  printmath.h  renderer.c  renderer.h  scene.c  scene.h  surface.c  surface.h  vkapi.c  vkapi.h  vulkanplay.c  world.c  world.h
src/models/: plane.c  plane.h  sphere.c  sphere.h  terrain.c  terrain.h  tetrahedron.c  tetrahedron.h
src/platform/: plat.c  plat_wl.c  plat_wl.h  plat_xcb.c  plat_xcb.h
src/shaders/: main.frag  main.vert
utils/: diamond_square.py  island_mask.py  make_island.sh
